2ags (5.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: vst3 output mode
	* TODO:JK: refactoring enumerated types as function arguments
	* implemented provide system time to ags-fx-vst3
	* extended libags_vst API reference manual
	* modified -xc++ of gsequencer_CPPFLAGS and midi2xml_CPPFLAGS
	* modified -std= from gnu++2a to c++2a
	* refactored template variable and field names of some files
	* fixed usage of GtkCheckButton get active
	* fixed midi2xml

ags (4.5.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* introduced api-pdf automake target

ags (4.5.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong type check in AgsSFZSynthUtil
	* implemented ags_pad_reset_flags()
	* implemented ags_ui_enums.c
	* fixed ags_lv2_turtle_scanner.c memory corruption
	* fixed ags_complex_get() return value
	* fixed ags_complex_get_term() and ags_complex_set_term() gtk-doc function
	* fixed ags_vst3_manager_load_file() w32 related plugin_so handle broken reference
	* fixed ags_vst3_manager.c missing usage of G_DIR_SEPARATOR

ags (4.5.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsDial to emit changed signal
	* updated listing effects_recall_container.c.in in developer doc

ags (4.5.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am set LIBAGS_VST3_LIBDIR and LIBAGS_VST3_LIBS only conditionally

ags (4.5.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added check LIBAGS_VST3_LIBDIR and LIBAGS_VST3_LIBS environment before set in configure.ac
	* improved configure.ac and Makefile.am GSEQUENCER_CFLAGS, MIDI2XML_CFLAGS, MIDI2XML_CXXFLAGS and MIDI2XML_LDFLAGS
	* modified -std=gnu++2a for gsequencer and midi2xml
	* fixed ags_composite_editor.c wrong object cast with AgsAutomationEdit

ags (4.5.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* modified ags_vst_types.h AgsVstSpeakerArrangement typedef