@@ -42,7 +42,9 @@ GRecMutex* ags_soundcard_util_get_obj_mutex(GObject *soundcard);
 
 void ags_soundcard_util_adjust_delay_and_attack(GObject *soundcard);
 
-gint64 ags_soundcard_util_offset_to_system_time(GObject *soundcard);
+gint64 ags_soundcard_util_calc_system_time(GObject *soundcard);
+gint64 ags_soundcard_util_calc_time_samples(GObject *soundcard);
+gint64 ags_soundcard_util_calc_time_samples_absolute(GObject *soundcard);
 
 G_END_DECLS
 
